--- a/Downloads/DjFakeLogoPrediction/DjFakeLogoPrediction - Copy/DjFakeLogoPrediction/requirements.txt
+++ b/Downloads/DjFakeLogoPrediction/DjFakeLogoPrediction - Copy/DjFakeLogoPrediction/requirements.txt
@@ -4,3 +4,8 @@ numpy==1.25.1
 pandas
 tensorflow==2.14.0
 efficientnet==1.1.1
+django-jazzmin
+keras-applications
+scikit-image
+tensorflow
+opencv-python
